--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,3 +21,5 @@ jobs:
 
       - name: Fix style errors and test linting
         run: composer run-script fix-style && composer run-script lint
+
+# bash <(curl -s https://codecov.io/bash)
