Added static analysis and fixed found errors from it. Removing github action as it's not on Travis. Add static analysis and composer validate to Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ install:
   - travis_retry composer install --prefer-dist --no-progress --no-suggest
 
 script:
+  - composer validate
   - composer run-script test
   - composer run-script fix-style && composer run-script lint
+  - composer run-script analysis
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
