--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
   "require-dev": {
     "orchestra/testbench": "^3.8 || ^4.0",
     "phpunit/phpunit": "^8.0",
-    "squizlabs/php_codesniffer": "*"
+    "squizlabs/php_codesniffer": "*",
+    "phpstan/phpstan": "^0.12.0"
   },
   "autoload": {
     "files": [
@@ -49,6 +50,7 @@
     "test-coverage": "vendor/bin/phpunit --coverage-clover=coverage.xml",
     "fix-style": "vendor/bin/phpcbf",
     "lint": "vendor/bin/phpcs",
-    "check": "vendor/bin/phpunit && vendor/bin/phpcbf && vendor/bin/phpcs"
+    "check": "vendor/bin/phpunit && vendor/bin/phpcbf && vendor/bin/phpcs",
+    "analysis": "vendor/bin/phpstan --level max src tests"
   }
 }
