--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   "require": {
     "php": "^7.2",
     "illuminate/routing": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
-    "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0"
+    "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
+    "tomhart/array-from-object": "^1.0"
   },
   "require-dev": {
     "orchestra/testbench": "^3.8 || ^4.0",
